--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
                     <div class="contact-info-item">
                         <i class="fa-solid fa-envelope"></i>
                         <h4>Write to us at</h4>
-                        <p>john@gmail.com</p>
+                        <p>ozodbekjumakulov12@gmail.com</p>
                     </div>
 
                     <div class="contact-info-item">
                         <i class="fa-solid fa-phone"></i>
                         <h4>Call us on</h4>
-                        <p>+1 234 5678 90</p>
+                        <p>+998 88 993 04 09</p>
                     </div>
                 </div>
                 <div class="contact-form">
